Fixing full width alignment

--- a/assets/scss/_utils.scss
+++ b/assets/scss/_utils.scss
@@ -5,6 +5,7 @@
 .vw-100, .vw-100-bg {
 	width: 100vw;
 	margin-left: calc( -50vw + 50% ) !important;
+	margin-right: calc( -50vw + 50% ) !important;
 	max-width: none !important;
 }
 
